Changed internal textview positioning

--- a/CreditCardEntryDemo/res/layout/activity_main.xml
+++ b/CreditCardEntryDemo/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
         <com.devmarvel.creditcardentry.library.CreditCardForm
             android:id="@+id/form_no_zip"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="15dp"
             app:card_number_hint="XXXX XXXX XXXX XXXX"
